--- a/text.html
+++ b/text.html
@@ -10,6 +10,6 @@
  <body>
 <h1>Orenthal James Simpson Dead at 76</h1>
 
-   <p>Orenthal James Simpson was an American football player and actor. He played in the National Football League for 11 seasons, primarily with the Buffalo Bills, and is regarded as one of the greatest running backs. <strong>of all time</strong>o</p>
+   <p>Orenthal James Simpson was an American football player and actor. He played in the National Football League for 11 seasons, primarily with the Buffalo Bills, and is regarded as one of the greatest running backs <strong>of all time</strong>
  </body>
  </html>
