--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@ ul { margin-left: 0;
 
   a { color: blue;
      text-decoration: none;
+     font-size:20px;
+     transition: .5s font-size, .5s color;
   }
 
 a:hover {
   color: red;
   text-decoration: underline
   text-transform: uppercase;
+  font-size: 28px; 
 
 }
 a: active { background: black;'
