--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ a: active { background: black;'
             <body>
               <ul>
                 <li><a href= "text.html">text page</a>< </li>
+                <li><a href="boxes">box page</a></li>
               </ul>
               <p>hello world.</p>
             </body>
