--- a/positions.html
+++ b/positions.html
@@ -1,17 +1,79 @@
-  <!doctype html>
-            } 
-            <html lang="en">
-            <head>
-              <meta charset="utf-8">
-              <title>boxes</title>
-              <style>
-div{background:yellow;
-   }
- </style>
-            </head>
-            
-            <body>
-<div></div>
-              
-            </body>
-            </html>
+<!doctype html>
+
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <title>my postion page</title>
+  <style>
+    div {
+      background: rgb(116, 181, 250);
+      width: 400px;
+      height: 200px;
+      margin: 50px;
+      margin-left: 50px;
+      padding: 50px;
+      border: 10px solid rgb(72, 72, 165);
+      border-radius: 1000px;
+
+    }
+    .static {
+      postion: static;
+      z-index: 500;
+    }
+
+    .relative {
+      postion: relative;
+      right: 200px;
+      top: -150px;
+      background: rgb(157, 211, 157); 
+      z-index: -100;
+    }
+
+    .fixed {
+      position: fixed;
+      left: 220px ;
+      top: 0;
+      background: rgb(242, 162, 153);
+      z-index: 50;
+    }
+    .absolute {
+      position: absolute; 
+      right: 0;
+      top: 0;
+    }
+
+    .sticky { 
+      postion: sticky;
+      top: 200px;
+    }
+  </style>
+
+</head>
+
+<body>
+
+  <div class="static">
+    <p>static box</p>
+  </div>
+
+  <div class="relative">
+    <p>relative box</p>
+  </div>
+
+  <div class="fixed">
+    <p>fixed box</p>
+  </div>
+
+
+  <div class="absolute">
+    <p>asolute box</p>
+  </div>
+
+  <div class="sticky">
+    <p>sticky box</p>
+  </div>
+
+</body>
+
+</html>
