--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ h1 {
               
               <ul>
                 <li><a href= "text.html">Emancipation Proclamation</a></li>
+                <li><a href="positions.html">box page</a></li>
                 <li><a href="boxes.html">box page</a></li>
               </ul>
               <p>The best time to wear a striped sweater is all the time. ~ SpongeBob 2001 
