--- a/seahorse.html
+++ b/seahorse.html
@@ -73,8 +73,7 @@
     <center>
       <h1>The Sea Horse</h1>
     </center>
-
-    <img src="images/download.jpg" alt="seahorses are fun" />
+    <img src="images/seahorde.jpg" alt="seahorse thingy" />
   </header>
   <nav>
     <ul>
