--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <li><a href="positions.html">Positions</a></li>
     <li><a href="boxes.html">Box page</a></li>
     <li><a href="seahorse.html">Seahore</a></li>
+    <li><a href="images.html"> Markiplier Live FNAF Reaction (GAY)</a></li>
   </ul>
   <p>The best time to wear a striped sweater is all the time. ~ SpongeBob 2001
 
